# Digimart

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/services/identity/: Dockerfile  alembic.ini  pyproject.toml
backend/services/identity/alembic/: env.py
backend/services/identity/alembic/versions/: 0001_create_identity_tables.py
backend/services/identity/app/: __init__.py  main.py
backend/services/identity/app/api/: deps.py
backend/services/identity/app/api/routes/: auth.py
backend/services/identity/app/core/: config.py  exceptions.py  permissions.py  security.py
backend/services/identity/app/db/: base.py  session.py
backend/services/identity/app/models/: __init__.py  user.py
backend/services/identity/app/publishers/: identity_publisher.py
backend/services/identity/app/schemas/: auth.py
backend/services/identity/app/service_layer/: auth_service.py  permission_service.py
backend/services/identity/tests/contract/: test_identity_events.py
backend/services/identity/tests/integration/: test_auth_routes.py
backend/services/identity/tests/unit/: test_permission_service.py
backend/shared/: pyproject.toml
backend/shared/digimart_shared/: __init__.py  events.py  messaging.py  settings.py
docs/: API.md  ARCHITECTURE.md  CODING_STANDARDS.md  DATABASE.md  DEVELOPMENT_PHASES.md  EVENTS.md  FOLDER_STRUCTURE.md  SECURITY.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: _events.json  trace
frontend/.next/cache/: config.json
frontend/src/app/: globals.css  (+2 more)
(+31 files in other folders)
