[project]
name = "digimart-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.3",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["digimart_shared"]
