[project]
name = "digimart-identity"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "email-validator>=2.2.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pwdlib[argon2]>=0.2.1",
    "PyJWT>=2.8.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "SQLAlchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../../shared"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
